# wisdom-chess

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  conanfile.txt
check/: .editorconfig  .gitignore  CMakeLists.txt  Makefile  NOTES  TODO.md  blarg.gam  board.c  board.d  board.h  check.c  check.d  check.h  chess  config.h.in  debug.c  debug.d  debug.h  depend.sh  edit.c  evaluate.c  evaluate.d  foo.gam  game.c  game.h  generate.c  generate.d  generate.h  global.h  material.c  material.h  move.c  move.d  move.h  move_list.d  move_tree.c  move_tree.d  piece.d  piece.h  play.c  (+7 more)
check/cmake.modules/: CMakeHelpers.cmake
check/games/: about-to-queen.gam  boring-endgame.gam  checkmate-close.gam  destroyed.fen  let-me-take-that-back.gam  messed-up.gam  really-close-to-checkmate.gam  sacrificed-bishop.gam  test.gam  test2.gam  wont-checkmate.fen
check/games-with-problems/: almost-stalemate.gam  killing-the-king-on-the-left.gam  test-messed-up.gam  why-no-castle.gam  why-no-take-pawn.fen  wont-checkmate.gam
check/src/: attack_vector.c  attack_vector.h  attack_vector_private.h  bitboard.h  board.c  board.cpp  board.h  board.hpp  board_builder.cpp  board_builder.hpp  board_check.c  board_check.cpp  board_check.h  board_code.cpp  board_code.hpp  board_history.cpp  board_history.hpp  board_iterator.cpp  board_iterator.h  board_positions.c  board_positions.h  check.c  check.cpp  check.h  check.hpp  compact_bitboard.h  coord.cpp  coord.h  coord.hpp  coord_iterator.cpp  coord_iterator.hpp  debug.c  debug.h  edit.c  evaluate.c  evaluate.cpp  evaluate.h  evaluate.hpp  fen.cpp  fen.hpp  (+72 more)
check/test/: CMakeLists.txt  assert_test.cpp  attack_vector_test.cpp  base_test.hpp  bitboard_info.cpp  bitboard_info.hpp  bitboard_test.cpp  board_builder.cpp  board_builder.hpp  board_builder_test.cpp  board_code_test.cpp  board_hash_test.cpp  board_iterator_test.cpp  castle_test.cpp  check_test.cpp  compact_bitboard_test.cpp  coord_test.cpp  en_passant_test.cpp  fen_parser_test.cpp  fen_test.cpp  history_test.cpp  material_test.cpp  move_list_test.cpp  move_test.cpp  parse_simple_move.cpp  parse_simple_move.hpp  parse_simple_move_test.cpp  pawn_promotion_test.cpp  piece_test.cpp  position_test.cpp  search_test.cpp  test_main.cpp  tests.hpp  transposition_table_test.cpp  variation_glimpse_test.cpp
engine/: .clang-format  CMakeLists.txt  ClangToolchain.cmake  GnuToolchain.cmake  MSVCToolchain.cmake  TODO.md  conanfile.txt
engine/bench/: CMakeLists.txt  README.md  history_hash.cpp
engine/benchmark/: CMakeLists.txt  benchmark_main.cpp  bm_threats.cpp  is_king_threatened.cpp
engine/games/: all-setup.gam  almost-mate.gam  checkmate.gam  knight-mate.gam  not_the_same.gam  pawn.fen  possibe-checkmate.gam  winning-maybe.gam  winning2.gam  winning3.gam
engine/games-with-problems/: why-queen-sac.gam
engine/src/: CMakeLists.txt  analytics.cpp  analytics.hpp  analytics_nosqlite.cpp  analytics_sqlite.cpp  analytics_sqlite.hpp  board.cpp  board.hpp  board_builder.cpp  board_builder.hpp  board_code.cpp  board_code.hpp  board_history.hpp  caching_allocator.cpp  caching_allocator.hpp  check.cpp  check.hpp  coord.cpp  coord.hpp  coord_iterator.cpp  coord_iterator.hpp  evaluate.cpp  evaluate.hpp  fen_parser.cpp  fen_parser.hpp  game.cpp  game.hpp  game_status.cpp  game_status.hpp  generate.cpp  generate.hpp  global.hpp  gsl.hpp  history.cpp  history.hpp  logger.cpp  logger.hpp  main.cpp  material.cpp  material.hpp  (+40 more)
engine/test/: CMakeLists.txt  assert_test.cpp  board_builder_test.cpp  board_code_test.cpp  board_test.cpp  castle_test.cpp  check_test.cpp  chess_bench_main.cpp  coord_test.cpp  en_passant_test.cpp  fen_parser_test.cpp  game_test.cpp  generate_test.cpp  history_test.cpp  material_test.cpp  move_list_test.cpp  move_parse_test.cpp  move_perft_test.cpp  move_test.cpp  parse_simple_move_test.cpp  pawn_promotion_test.cpp  perft.cpp  perft.hpp  perft_main.cpp  perft_test.cpp  piece_test.cpp  position_test.cpp  search_test.cpp  str_test.cpp  test_main.cpp  tests.hpp  transposition_table_test.cpp  uuid_test.cpp  variation_glimpse_test.cpp
engine/toolchain/: ClangVcpkgToolchain.cmake  GnuToolchain.cmake
old-engine/: CMakeLists.txt  Makefile  check.c  check.h  conanfile.txt  coord.h  debug.h  evaluate.c  evaluate.h  generate.c  move.c  move_list.c  move_tree.c  move_tree.h  piece.c  piece.h  play.c  search.c  search.h
old-engine/benchmark/: CMakeLists.txt  benchmark_main.cpp
qt-qml-gui/: AboutDialog.qml  Board.qml  BoardDimensions.qml  CMakeLists.txt  ChessSquare.qml  DesktopRoot.qml  Dialogs.qml  DrawProposalDialog.qml  Helper.js  ImageToolButton.qml  MobileRoot.qml  NewGameDialog.qml  Piece.qml  PiecesModel.qml  PromoteDropdown.qml  PromotedPieceModel.qml  Root.qml  SettingsMenu.qml  StatusBar.qml  UISettings.qml  chesscolor.cpp  chesscolor.h  chessengine.cpp  chessengine.h  chessengine.hpp  chessenginenotifier.cpp  chessenginenotifier.h  chessgame.cpp  chessgame.h  chessgame.hpp  colorclass.cpp  colorclass.h  colorenum.cpp  colorenum.h  conanfile.txt  desktop_main.qml  gamemodel.cpp  gamemodel.h  gamemodel.hpp  gamestate.hpp  (+15 more)
qt-qml-gui/images/: README.md  wisdom-chess.icns
qt-qml-gui/main/: Board.qml  ChessSquare.qml  DesktopRoot.qml  MobileRoot.qml  chessgame.cpp  desktop_main.qml  game_settings.cpp  game_settings.hpp  gamemodel.cpp  gamemodel.hpp  mobile_main.qml  piecesmodel.cpp  ui_settings.cpp  ui_settings.hpp  ui_types.cpp  ui_types.hpp  wasm_main.qml
qt-qml-gui/popups/: AboutDialog.qml  ConfirmQuitDialog.qml  Dialogs.qml  GameMenu.qml  NewGameDialog.qml  PromotedPieceModel.qml  SettingsDialog.qml  SettingsMenu.qml
qt-qml-gui/settings/: SettingsMenu.qml  ui_settings.cpp
qtgui/: CMakeLists.txt  conanfile.txt  main.cpp  resources.qrc
scripts/linter/: CMakeLists.txt  linter.cpp  linter.hpp  main.cpp  package-lock.json  package.json  tsconfig.json
ui/: .clang-format  CMakeLists.txt
ui/console/: CMakeLists.txt  main.cpp  play.cpp  play.hpp
ui/qml/: CMakeLists.txt
ui/react/: CMakeLists.txt  generate.py  index.html  package-lock.json  package.json  (+4 more)
(+373 files in other folders)
