if (WISDOM_CHESS_CONSOLE_UI)
    add_subdirectory(console)
endif()

if (WISDOM_CHESS_QT_DIR)
    list(APPEND CMAKE_PREFIX_PATH ${WISDOM_CHESS_QT_DIR})
    message("-- wisdom-chess: WISDOM_CHESS_QT_DIR added to CMAKE_PREFIX_PATH")
endif()

find_package(Qt6 QUIET COMPONENTS Quick)

if (Qt6_FOUND AND WISDOM_CHESS_QML_UI)
    message("-- wisdom-chess: Qt6 GUI enabled.")
    add_subdirectory(qml)
else()
    if (Qt6_FOUND)
        message("-- wisdom-chess: Qt6 GUI disabled")
    else()
        message("-- wisdom-chess: Qt6 GUI disabled (not found)")
    endif()
endif()

if (EMSCRIPTEN AND WISDOM_CHESS_REACT_UI)
    add_subdirectory(wasm)
    add_subdirectory(react)
endif()
