if (WISDOM_CHESS_CONSOLE_UI)
    add_subdirectory(console)
endif()

if (WISDOM_CHESS_QT_DIR)
    list(APPEND CMAKE_PREFIX_PATH ${WISDOM_CHESS_QT_DIR})
    message("-- wisdom-chess: WISDOM_CHESS_QT_DIR added to CMAKE_PREFIX_PATH")
endif()

find_package(Qt6 QUIET COMPONENTS Quick)

if (Qt6_FOUND)
    if (WISDOM_CHESS_QML_UI)
        message("-- wisdom-chess: Qt6 GUI enabled.")
        add_subdirectory(qml)
    else()
        message("-- wisdom-chess: Qt6 GUI detected, but disabled.")
    endif()
elseif (WISDOM_CHESS_QML_UI AND NOT WISDOM_CHESS_QML_UI STREQUAL "Auto")
    message(FATAL_ERROR "-- wisdom-chess: Qt6 QML UI requested, but Qt6 not found.")
else()
    message("-- wisdom-chess: Qt6 not found. QML UI disabled.")
endif()

if (EMSCRIPTEN AND WISDOM_CHESS_REACT_UI)
    add_subdirectory(wasm)
    add_subdirectory(react)
endif()
